--- a/Conhecimentos Bancários/index.html
+++ b/Conhecimentos Bancários/index.html
@@ -505,6 +505,72 @@
             <p><img width="800px" src="img/orgaos-fiscalizadores-lei-de-sigilo-bancario.png" alt="representação dos órgãos fiscalizadores e suas atribuições"></p>
 
         </section>    
+        <section>
+
+            <!-- AULA 10-->
+    
+            <h2>Aula 11 - Lei Geral de Proteção de Dados (LGPD)</h2>
+            <p>Art. 1º Esta Lei dispõe sobre o <strong>tratamento</strong> de <strong>dados pessoais</strong>, inclusive nos meios digitais, por pessoa natural ou por pessoa jurídica de direito público ou privado, com o objetivo de proteger os direitos fundamentais de liberdade e de privacidade e o livre desenvolvimento da personalidade da pessoa natural.</p>
+            <h4>Dados pessoais</h4>
+            <p>Qualquer informação relacionada a uma pessoa natural (um ser humano)</p>
+            <h4>Tratamento de dados</h4>
+            <p>Toda operação realizada com dados pessoais, incluindo:</p>
+            <ul>
+                <li>Coleta</li>
+                <li>Utilização</li>
+                <li>Processamento</li>
+                <li>Armazenamento</li>
+                <li>Eliminação</li>
+            </ul>
+            <h3>Conceitos Importantes</h3>
+            <p><strong>Dados sensíveis:</strong> origem racial ou étnica, convicção religiosa, opinião política, filiação a sindicato ou a organização de caráter religioso, filosófico ou político, dado referente à saúde ou à vida sexual, dado genético ou biométrico.</p>
+            <p><strong>Dado anonimizado:</strong> dado relativo a titular que não possa ser identificado, considerando a utilização de meios técnicos razoáveis e disponíveis na ocasião de seu tratamento.</p>
+            <p><strong>Titular:</strong> pessoa natural a quem se referem os dados pessoais que são objeto de tratamento.</p>
+            <p><strong>Agentes de tratamento:</strong> o controlador (decide) e o operador (realiza o tratamento).</p>
+            <p><strong>Anonimização:</strong> utilização de meios técnicos razoáveis e disponíveis no momento do tratamento, por meio dos quais um dado perde a possibilidade de associação, direto ou indireta, a um indivíduo.</p>
+            <h3>Fundamentos</h3>
+            <ol>
+                <li><strong>o respeito à privacidade;</strong></li>
+                <li><strong>a autodeterminação informativa;</strong><br>Significa que o titular tem direito e o poder de decidir sobre seus dados e a forma como são tratados.</li>
+                <li><strong>a liberdade de expressão, de informação, de comunicação e de opinião;</strong><br>É o outro lado da moeda, deixando claro que o direito de proteção de dados não é absoluto, e em alguns casos as regras não se aplicam.</li>
+                <li><strong>a inviolabilidade da intimidade, da honra e da imagem;</strong></li>
+                <li><strong>o desenvolvimento econômico e tecnológico e a inovação</strong><br>Ainda o outro lado da moeda: alguns negócios dependem imensamente de dados, não devendo a proteção inviabilizar esses negócios.</li>
+                <li><strong>a livre iniciativa, a livre concorrência e a defesa do consumidor; e</strong><br>Aqui, o objetivo é garantir que os dados não sejam usados como forma de impedir a concorrência.</li>
+                <li><strong>os direitos humanos, o livre desenvolvimento da personalidade, a dignidade e o exercício da cidadania pelas pessoas naturais.</strong></li>
+            </ol>
+            <h3>Aplicabilidade</h3>
+            <p><img src="img/lgpd-aplicabilidade.png" alt="aplicabilidade lgpd"></p>
+            <h3>Tratamento dos Dados Pessoas</h3>
+            <p><img src="img/lgpd-tratamento_dos_dados.png" alt="tratamento dos dados lgpd"></p>
+            <h3>Direitos do Titular</h3>
+            <p><img src="img/lgpd-direitos_do_titular.png" alt="direitos do tiular"></p>
+            <h3>Fiscalização</h3>
+            <p>Compete à Autoridade Nacional de Proteção de Dados (ANPD), autarquia de natureza especial, dotada de autonomia técnica e decisória, com patrimônio próprio e com sede e foro no Distrito Federal:</p>
+            <ol>
+                <li><strong>zelar pela proteção dos dados pessoais;</strong></li>
+                <li><strong>fiscalizar e aplicar sanções;</strong></li>
+                <li>apreciar petições;</li>
+                <li>promover conhecimento sobre proteção de dados pessoais;</li>
+                <li><strong>promover e elaborar estudos;</strong></li>
+                <li>promover ações de cooperação;</li>
+                <li>editar regulamos e procedimentos;</li>
+                <li>implementar mecanismos simplificados, inclusive por meio eletrônico, para o <strong>registro de reclamações</strong> sobre o tratamento de dados pessoas em desconformidade com esta Lei.</li>
+            </ol>
+            <h3>Sanções</h3>
+            <ol>
+                <li>advertência, com indicação de prazo para adoção de medidas corretivas;</li>
+                <li>multa simples, de até 2% (dois por cento) do faturamento da pessoa jurídica de direito privado, grupo ou conglomerado no Brasil no seu último exercício, excluídos os tributos, limitada, no total, a R$ 50 milhões de reais por inflação;</li>
+                <li>multa diária, observado o limite total a que se refere o inciso II;</li>
+                <li>publicização da infração após devidamente apurada e confirmada a sua ocorrência;</li>
+                <li>bloqueio dos dados pessoais a que se refere a nfração até sua regularização;</li>
+                <li>eliminação dos dados pessoais a que se refere a infração</li>
+                <li>suspensão do exercíio da atividade de tratamento dos dados pessoais a que se refere a infração pelo período máximo de 6 (seis) meses, prorrogável por igula períoodo;</li>
+                <li>proibição parcial ou total do exercício de atividades relaciomnadas a tratamento de dados.</li>
+            </ol>
+        </section>
+
+
+        </section>
         <section class="campoQuestoes">
             <h2>Questões de Conhecimentos Bancários</h1>
             <div id="questoes"></div>
