--- a/Probabilidade e Estatística/index.html
+++ b/Probabilidade e Estatística/index.html
@@ -41,7 +41,7 @@
             <p><strong>Parâmetros: </strong><u>descrições numéricas</u> de características populacionais que raramente são conhecidas.</p>
             <p><strong>Estatística (ou estimador): </strong><u>medidas numéricas</u> obtidas de amostras representativas extraídas da população.</p>
             <h3>Apresentação de Dados</h3>
-            <p><strong>Tabela: </strong>deve apresentar os dados de modo resumido e seguro, oferecendo uma visão geral do comportamento do fenômeno. (orma tabular)</p>
+            <p><strong>Tabela: </strong>deve apresentar os dados de modo resumido e seguro, oferecendo uma visão geral do comportamento do fenômeno. (forma tabular)</p>
             <p><strong>Gráfico: </strong>são representações visuais de dados e informações numéricas que servem para facilitar a interpretação destas.</p>
             <h3>Método Experimental x Método Estatístico</h3>
             <p><strong>Método Experimental: </strong>consiste em manter constantes as causas (fatores), com exceção de uma, que é variada para que seus efeitos sejam descobertos.</p>
@@ -55,7 +55,7 @@
             <p><strong>Variável: </strong>é a característica de interesse que é medida em cada elemento da amostra ou população.</p>
             <p><strong>Variável Quantitativa: </strong>são as características que podem ser medidas em uma escala quantitativa, ou seja, apresentam <u>valores numéricos que fazem sentido</u>.</p>
             <p>Podem ser contínuas ou discretas.</p>
-            <p><strong>Variável Quantitativa Discreta: </strong>características mensuráveis que podem assumir apenas um número finito ou infinito contável de valores e, assim, somente fazem sentido <u>valores inteiros</u>.</p>
+            <p><strong>Quantitativa Discreta: </strong>características mensuráveis que podem assumir apenas um número finito ou infinito contável de valores e, assim, somente fazem sentido <u>valores inteiros</u>.</p>
             <p><strong>Quantitativa Contínua: </strong>características mensuráveis que assumem valores em uma escala contínua (na reta real), para quais <u>valores fracionais</u> fazem sentido.</p>
             <p><strong>Variável Qualitativa: </strong>características que não possuem valores quantitativos, mas, ao contrário, são definidas por várias categorias, ou seja, representam uma classificação dos indivíduos. Podem ser nominais ou ordinais.</p>
             <p><strong>Qualitativa Nominal: </strong>não existe ordenação dentre as categorias.</p>
