--- a/Desenvolvimento de Software/index.html
+++ b/Desenvolvimento de Software/index.html
@@ -27,6 +27,8 @@
             <li><a href="../Inglês/index.html">Inglês</a></li>
             <li><a href="../Português/index.html">Português</a></li>
             <li><a href="../Matemática/index.html">Matemática</a></li>
+            <li><a href="../Simulado/index.html">Simulado</a></li>
+            <li><a href="../Redação/index.html">Redação</a></li>
         </ul>
     </nav>
     <main>
