--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
             <li><a href="../Inglês/index.html">Inglês</a></li>
             <li><a href="../Português/index.html">Português</a></li>
             <li><a href="../Matemática/index.html">Matemática</a></li>
+            <li><a href="../Simulado/index.html">Simulado</a></li>
+            <li><a href="../Redação/index.html">Redação</a></li>
         </ul>
   </nav>
     <main>
-        <h2>Banco de anotações em forma de site de estudos para o Banco do Brasil!</h2>
-        <p>Escolha uma matéria no menu acima ou nos cards abaixo para acessar as anotações.</p>
+        <h2>Anotações em forma de site de estudos para o concurso do Banco do Brasil!</h2>
         <div id="BoxMaterias">
             <div class="AreaDeConhecimentos">
                 <p>Conhecimentos Básicos</p>
@@ -46,10 +47,9 @@
                 <a href="Conhecimentos Bancários/index.html"><div id="BomRevisar" class="Materias">Conhecimentos Bancários</div></a>
             </div>
             <div class="AreaDeConhecimentos">
-                <p>Redação</p>
-                <a href="">
-                    <div id="BomRevisar" class="Materias">Redação</div>
-                </a>
+                <p>Redação e Simulado</p>
+                <a href="Redação/index.html"><div id="BomRevisar" class="Materias">Redação</div> </a>
+                <a href="Simulado/index.html"><div id="Importante" class="Materias">Simulado</div></a>
             </div>
         </div>
     </main>
