--- a/Conhecimentos Bancários/index.html
+++ b/Conhecimentos Bancários/index.html
@@ -463,7 +463,69 @@
 
         <section>
 
-            <!-- AULA 10-->
+            <!-- AULA 02 -->
+
+            <h2>Orçamento e Títulos Públicos</h2>
+
+            <h3>Política Fiscal e Orçamento</h3>
+
+            <p>A política fiscal consiste nas decisões e ações relacionadas aos gastos e arrecadações (receitas) do governo, que a utiliza para alterar no nível de produto da economia.</p>
+            <p>No Brasil, a Secretaria do Tesouro Nacional (STN) é responsável por sua administração no âmbito federal, mas os estados e municípios também são agentes da política fiscal. </p>
+            <p>Os gastos podem ainda ser divididos em despesas e transferências. A diferença é que as transferências (como o Bolsa Família) não têm contrapartida, enquanto as despesas resultam no recebimento, pelo governo, de um bem ou serviço. </p>
+            <p>Portanto, os instrumentos da política fiscal são: gasto do governo (G), transferência (Tr) e tributação (T). A execução da política se dá por meio do orçamento do governo, que consiste na combinação desses três instrumentos.</p>
+            <p><img src="img/instrumentos.politicas.fiscais.png" alt="Instrumentos políticas fiscais"></p>
+
+            <h4>Política Fiscal Expansionista X Política Fiscal Restritiva (Contracionista)</h4>
+            <p>Quando o governo <strong>aumenta seus gastos</strong> ou <strong>reduz a tributação</strong>, dizemos que ele está adotando uma <strong>política fiscal expansionista</strong>.</p>
+            <p>Simetricamente, quando o governo diminui seus gastos ou <strong>aumenta a tributação</strong>, estamos diante de uma <strong>política fiscal restritiva</strong> – também chamada contracionista.</p>
+            <p><img src="img/politica.expansionista.e.restritiva .png" alt="Política fiscal expansionista e restritiva"></p>
+
+            <h3>Orçamento Público</h3>
+
+            <h4>Déficit Primário, Operacional e Nominal</h4>
+            <p>O <strong>déficit primário</strong>, como o nome sugere, é a mensuração mais básica, pois considera apenas a diferença entre as despesas não-financeiras e as receitas não-financeiras. E por “não financeiro” devemos entender tudo aquilo que não é pagamento ou recebimento de <u>juros</u>.</p>
+            <p><img src="img/deficit.primario.png" alt="Déficit primário"></p>
+            <p>O <strong>déficit operacional</strong> leva em consideração o pagamento dos juros reais. Ou seja, são consideradas as despesas financeiras:</p>
+            <p><img src="img/deficit.operacional.png" alt="Déficit operacional"></p>
+            <p>O <strong>déficit nominal</strong> nada mais é que o déficit operacional corrigido pela inflação. Ele também pode ser calculado somando as despesas financeiras e não-financeiras e subtraindo as receitas financeiras e não financeiras.</p>
+            <p><img src="img/deficit.nominal.png" alt="Déficit nominal"></p>
+            <p>Observe que <strong>o déficit nominal é <u>o mais abrangente</u></strong>, pois inclui todas as receitas e despesas, financeiras e não financeiras. Isso nos leva ao esquema a seguir: </p>
+            <p><img src="img/tabela.deficit.png" alt="Déficit nominal"></p>
+
+            <h3>Títulos Públicos</h3>
+
+            <h4>Prefixados X Pós-fixados</h4>
+
+            <p><img src="img/pre.pro.fixado.png" alt=""></p>
+
+            <p><strong>Tesouro Prefixado</strong> é o título público federal que paga juros predefinidos. Ou seja, no momento da compra, você já sabe exatamente quanto irá receber no futuro.</p>
+            <p><strong>Tesouro Prefixado com Juros Periódicos</strong>, como o nome indica, faz pagamentos intermediários (normalmente a cada seis meses), ou seja, antes do vencimento. Esses pagamentos ocorrem por meio dos chamamos cupons de juros.</p>
+            <p><strong>Tesouro Selic</strong>, como esse conveniente nome indica, paga juros correspondentes à Taxa Selic adicionados de terminado percentual fixo.</p>
+            <p><strong>Tesouro IPCA</strong>, de forma semelhante, paga IPCA e algum juros adicional. Atualmente, há opções com ou sem cupom, ou seja, com ou sem pagamentos intermediários.</p>
+
+            <p><img src="img/titulos.publicos.resumo.png" alt=""></p>
+
+            <h4>Impostos e Taxas</h4>
+            <p>Como impostos, são cobrados o Imposto Sobre Operações Financeiras (IOF), para resgates da aplicação <u>em menos de 30 dias</u>, e o Imposto de Renda (IR), com alíquota regressiva a depender do prazo do investimento, da seguinte maneira:</p>
+            <ol>
+                <li>22,5%, em aplicações com prazo de até 180 dias;</li>
+                <li>20%, em aplicações com prazo de 181 dias até 360 dias;</li>
+                <li>17,5%, em aplicações com prazo de 361 dias até 720 dias;</li>
+                <li>15%, em aplicações com prazo acima de 720 dias.</li>
+            </ol>
+            <p>Portanto, se você comprar e resgatar em menos de 30 dias, vai pagar IOF e 22,5% de imposto de renda sobre o valor do rendimento (seu “lucro” com o título). Mas se resgatar após 250 dias, por exemplo, não pagará IOF, e o IR será de 20%. </p>
+            <p>São cobrados dois tipos de <strong>taxas</strong> nas operações com o Tesouro Direto: </p>
+            <ol>
+                <li>Taxa de custódia - cobrada semestralmente pela B3.</li>
+                <li>Taxa de administração - pode ser cobrada pela Instituição Financeira (corretoras, bancos ou distribuidoras de valores) e o valor pode variar entre elas.</li>
+            </ol>
+
+
+        </section>
+
+        <section>
+
+            <!-- AULA 10 -->
     
             <h2>Aula 10 - Sigilo Bancário: Lei Complementar nº 105/2001 e suas alterações</h2>
             <h3>Introdução</h3>
