--- a/Banco de Dados/index.html
+++ b/Banco de Dados/index.html
@@ -961,7 +961,68 @@
             <!-- AULA 05 -->
 
             <h2>Aula 05 - Data Warehouse</h2>
+
+            <h3>Business Intelligence (BI)</h3>
+            <h4>Definições</h4>
+            <p>Business Intelligence é o processo inteligente de coleta, organização, análise, compartilhamento e monitoração de dados que, depois de processados, geram informações para o suporte e para a tomada de decisões no ambiente de negócios.</p>
+            <p>Business Intelligence trata da capacidade de cruzar informações de diferentes bancos de dados, gerando relatórios analíticos diversos.</p>
+            <p>Business Intelligence se refere à aplicação de técnicas analíticas para informações sobre condições de negócio no sentido de melhorá-las, de uma maneira automatizada, mas com a interpretação e respostas humanas, de forma a melhorar a tomada de decisões.</p>
+            <p>Business Intelligence trata da descrição de habilidades das organizações para acessar dados e explorar informações, analisando e desenvolvendo percepções e entendimentos a seu respeito.</p>
+            <p>Business Intelligence são técnicas, métodos e ferramentas de análise de dados para subsidiar processos de decisão de uma empresa.</p>
+            <p>Business Intelligence nada mais é que uma série de conceitos e metodologias para auxiliar na tomada de decisões estratégicas nas empresas através principalmente de geração de relatórios gerenciais analíticos.</p>
+            <p>Business Inteligence é um termo utilizado para descrever as habilidades das corporações para coletar dados e explorar informações, analisá-las e desenvolver entendimentos para tomada de melhores decisões.</p>
+            <p>Business Intelligence (Inteligência de Negócio) é um termo criado pelo Gartner Group utilizado para representar um conjunto de processos, técnicas, metodologias, habilidades, ferramentas e capacidades utilizadas para acessar, coletar, organizar, tratar, analisar, cruzar, processar, compartilhar e monitorar dados de diversas fontes com o intuito de gerar informações e relatórios analíticos que suportem a gestão corporativa, a definição de estratégias e a tomada de decisão em ambientes de negócio.</p>
+            <h5>FIM DEFINIÇÕES</h5>
+            <p>O Business Intelligence é realizado sobre dados históricos consolidados, provenientes de bases multidimensionais, tais como Data Warehouses.<strong>O Business Intelligence é capaz de fornecer uma visão dos dados facilitando análises diagnósticas, descritivas e até preditivas para suportar a tomada de decisão.</strong></p>
+            <p>É interessante mencionar que um usuário que desejar utilizar os conceitos de BI precisará de uma infraestrutura arquitetural específica capaz de extrair, limpar, formatar, transformar e carregar dados estruturados ou não estruturados de diversas fontes em depósitos de informações que possam ser acessados por sistemas analíticos. Por fim, BI possui quatro habilidades: memória organizacional, informação integrada, criação de conhecimento (insight) e apresentação.</p>
             
+            <h3>Tipos de Análise</h3>
+            <h4>Análise Descritiva</h4>
+            <p>A análise descritiva responde à pergunta: “O que aconteceu?”. Ela se concentra em descrever ou resumir conjuntos de dados passados ou presentes de forma que seja compreensível e informativo. Ela olha para os dados históricos para informar o que ocorreu durante um período específico.</p>
+            <ul>
+                <li><strong>Objetivo:</strong> seu principal objetivo é resumir e descrever aspectos diferentes de dados e situações. É a base para todas as outras formas de análise de dados. Ela fornece um entendimento inicial do que aconteceu no passado ou o que está acontecendo no presente, através da compilação e apresentação de dados de forma que seja fácil de entender.</li>
+                <li><strong>Exemplos:</strong> relatórios de vendas que mostram o total de vendas por mês, dashboards de indicadores de performance que monitoram o desempenho atual de diferentes departamentos, gráficos (de diversos tipos) que auxiliam os gestores a tomar decisões.</li>
+                <li><strong>Analogia:</strong> é como olhar para uma fotografia de um evento. A foto mostra exatamente o que aconteceu naquele momento, sem interpretar ou prever os resultados.</li>
+            </ul>
+            <h4>Análise Diagnóstica</h4>
+            <p>A análise diagnóstica responde à pergunta: “Por que isso aconteceu?”. Ela vai além da descrição para explorar as causas dos eventos ou condições observadas. Ela investiga os dados para identificar relações de causa e efeito, ajudando a entender as razões por trás dos fenômenos observados.</p>
+            <ul>
+                <li><strong>Objetivo:</strong> foca em entender as causas e os fatores por trás de determinados eventos ou condições. Ela ajuda os tomadores de decisão a identificar as causas raízes dos problemas, facilitando a compreensão das situações e a identificação de áreas que necessitam de ajustes ou correções.</li>
+                <li><strong>Exemplos:</strong> análise de falhas de equipamentos, onde se investiga o motivo de uma máquina parar de funcionar; análise de cancelamento de clientes, para entender por que os clientes estão deixando a empresa; uso de técnicos de mineração para descobrir correlações.</li>
+                <li><strong>Analogia:</strong> é como ser um detetive que revisa as evidências para entender como e por que um evento ocorreu. Você analisa as pistas (dados) para construir uma narrativa do ocorrido</li>
+            </ul>
+            <h4>Análise Preditiva</h4>
+            <p>A análise preditiva responde à pergunta: “O que vai acontecer?”. Utilizando dados históricos e técnicas de modelagem estatística ou machine learning, ela estima possíveis resultados futuros e tenta prever o que é provável que aconteça com base em padrões passados e tendências atuais.</p>
+            <ul>
+                <li><strong>Objetivo:</strong> utiliza dados históricos e algoritmos para prever o que pode acontecer no futuro. Fornece estimativas sobre a probabilidade de futuros eventos, permitindo que os gestores tomem decisões proativas para se prepararem ou mitigarem potenciais problemas.</li>
+                <li><strong>Exemplos:</strong> previsões de demanda de venda de produtos, para auxiliar gestores no planejamento de estoque; modelos de pontuação (score) de crédito, para prever a probabilidade de inadimplência de clientes.</li>
+                <li><strong>Analogia:</strong> é como a previsão do tempo, onde, com base nos padrões climáticos passados e atuais, os meteorologistas preveem como estará o tempo nos próximos dias.</li>
+            </ul>
+            <h4>Análise Prescritiva</h4>
+            <p>A análise prescritiva responde à pergunta: “O que deve ser feito caso algo aconteça?”. Ela sugere cursos de ação e os possíveis resultados de cada decisão. Não apenas prevê o que poderia acontecer, mas também recomenda como responder aos cenários futuros previstos.</p>
+            <ul>
+                <li><strong>Objetivo:</strong> vai além da previsão para recomendar ações específicas que podem levar aos melhores resultados possíveis, com base nos dados analisados. Orienta os tomadores de decisão sobre quais caminhos seguir, apresentando diferentes cenários e possíveis resultados de cada ação proposta.</li>
+                <li><strong>Exemplos:</strong> otimização de rotas de entrega para reduzir custos de combustível e tempo de entrega; sistemas de recomendação personalizados, como os usados por serviços de streaming para sugerir conteúdos ao usuário.</li>
+                <li><strong>Analogia:</strong> é como um médico que, após diagnosticar a doença (análise diagnóstica) e prever o curso dela (análise preditiva), prescreve o tratamento mais eficaz para o paciente.</li>
+            </ul>
+
+            <h3>Data Warehouse (DW)</h3>
+            <h4>Contexto Geral</h4>
+            <p>Data Warehouse é um tipo de banco de dados voltado para análise de dados e apoio à decisão. Diferente dos bancos de dados tradicionais, que geralmente não armazenam informações históricas por muito tempo, o <u>Data Warehouse guarda grandes volumes de dados ao longo do tempo</u>, <strong>organizados por assunto</strong> (como vendas, clientes, finanças), permitindo consultas rápidas, relatórios e análises estratégicas.</p>
+            <p>Data Warehouse é um banco de dados especializado em gerar relatórios, logo sua performance para esse tipo de processamento é extremamente eficiente.</p>
+            <p>Os subconjuntos de Data Warehouse (DW) são chamados de Data Mart (DM)</p>
+            <h4>Características Essenciais</h4>
+            <p>Data Warehouse é orientado por assunto:</p>
+            <p>Um Data Warehouse é montado por assunto, isto é, ele trata de temas específicos e importantes para o negócio da organização. Por exemplo: uma empresa do ramo de concursos pode ter como assuntos principais: concursos militares, concursos fiscais, concursos policiais, concursos de tribunais, concursos bancários, concursos legislativos, entre outros. Aqui não tem muito o que falar, essa característica é bastante intuitiva.</p>
+            <p>Data Warehouse é não-volátil:</p>
+            <p>Galera, vem comigo! Vocês sabem o que significa algo ser volátil? O dicionário nos diz que volátil é aquilo que muda com facilidade. Nós vimos que os dados são carregados a partir do Banco de Dados Transacional para o Data Warehouse. Vocês se lembram? O lance é que o Data Warehouse é não-volátil, logo ele não muda com facilidade. Na verdade, os dados – em tese – jamais devem mudar (serem alterados ou deletados) após inseridos.</p>
+            <p>Em outras palavras, podemos dizer que os dados ficam disponíveis apenas para que os usuários realizem consultas e façam relatórios que auxiliem a tomada de decisão por parte dos gestores de uma organização. Logo, os dados disponíveis em um Data Warehouse mostram uma característica de somente leitura para os usuários finais de um banco de dados.</p>
+            <p>Data Warehouse é integrado:</p>
+            <p>Quando diferentes usuários inserem manualmente o nome do banco em formulários, surgem variações como “Caixa”, “CEF” ou “Caixa Econômica Federal”, o que gera inconsistência nos dados. Para evitar isso, o ideal é padronizar as entradas, como usar listas pré-definidas. No entanto, dados antigos ou vindos de sistemas diferentes ainda podem estar despadronizados. A solução é limpar a base de dados (isso significa que as inconsistências são removidas e os conflitos de informações são consertados antes de serem inseridos ou carregados em um Data Warehouse), corrigindo essas diferenças antes de carregar as informações em um Data Warehouse, que armazena dados de forma integrada, consistente e uniforme.</p>
+            <p>Data Warehouse é histórico (variável com o tempo):</p>
+            <p>Dados históricos são mantidos em um Data Warehouse. Por exemplo: pode-se recuperar dados de três, seis, doze meses ou até mesmo dados mais antigos de um Data Warehouse. Isso contrasta com os bancos de dados transacionais, em que geralmente apenas os dados mais recentes são mantidos. Por exemplo: um banco de dados transacional pode conter o endereço mais recente de um cliente, enquanto um DW pode conter todos os endereços associados a um cliente.</p>
+
+
         </section>
         
 
